--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 section {
-    padding: 1em;
+    padding: 10rem;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -9,12 +9,12 @@ section {
     }
     
  h1{
-    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-family: Roboto, Noto Sans JP, Arial, Helvetica, sans-serif;
     font-size: 4rem;
  }
  p{
     font-size: 2rem;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-family: Roboto, Noto Sans JP, Arial, Helvetica, sans-serif;
     color: gray;
     animation: fadeInUp; 
     animation-duration: 1.5s;
